google map wit nccu building overlay images

--- a/studynet/apps/bootstrap/templates/course/course-main-map.html
+++ b/studynet/apps/bootstrap/templates/course/course-main-map.html
@@ -1,5 +1,132 @@
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<script>
 
-<div subpage="course-main-map" class="subpage" >
+      var overlay;
+
+      USGSOverlay.prototype = new google.maps.OverlayView();
+
+      var allBounds = [
+          new google.maps.LatLngBounds(new google.maps.LatLng(24.987036735996593, 121.57283753562092), new google.maps.LatLng(24.98768585488995, 121.57356173205494)),
+          new google.maps.LatLngBounds(new google.maps.LatLng(24.985648533902555, 121.57227963614582), new google.maps.LatLng(24.986994070361114, 121.5736086707127)),
+          new google.maps.LatLngBounds(new google.maps.LatLng(24.986870808987735, 121.5735637437117), new google.maps.LatLng(24.98716862653596, 121.57427587020516)),
+          new google.maps.LatLngBounds(new google.maps.LatLng(24.984349735885566, 121.57262125206921), new google.maps.LatLng(24.985451072018318, 121.57373436881039)),
+          new google.maps.LatLngBounds(new google.maps.LatLng(24.98643051493524, 121.57586422563122), new google.maps.LatLng(24.987140416076155, 121.57668095827626)),
+          new google.maps.LatLngBounds(new google.maps.LatLng(24.986555112606943, 121.57498086446844), new google.maps.LatLng(24.987239485858247, 121.57593438977324))];
+
+      function initialize() {
+        var myLatLng = new google.maps.LatLng(24.9860191, 121.57646120000004);
+        var mapOptions = {
+          zoom: 17,
+          center: myLatLng,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+
+        var map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
+
+        var swBound = new google.maps.LatLng(24.981598466109684, 121.57128404940318);
+        var neBound = new google.maps.LatLng(24.989106001299675, 121.58085417116831);
+        var bounds = new google.maps.LatLngBounds(swBound, neBound);
+
+        map.panToBounds(bounds);
+
+        // Photograph courtesy of the U.S. Geological Survey
+        for (var i=1; i<=6; i++)
+          overlay = new USGSOverlay(allBounds[i-1], "{{ STATIC_URL }}img/NCCU_buildings/"+i+".png", map);
+        // var srcImage = 'images/1_大智樓.png';
+
+        /*overlay.setMap(null);
+        var swBound = new google.maps.LatLng(25.68694658029895, 122.77345042038082);
+        var neBound = new google.maps.LatLng(26.98753248969304, 123.57474458623051);
+        var bounds = new google.maps.LatLngBounds(swBound, neBound);
+        overlay = new USGSOverlay(bounds, srcImage, map);*/
+
+        /*var rect = new google.maps.Rectangle({
+          map: map,
+          bounds: bounds
+        });*/
+      }
+
+      function USGSOverlay(bounds, image, map) {
+
+        // Now initialize all properties.
+        this.bounds_ = bounds;
+        this.image_ = image;
+        this.map_ = map;
+
+        // We define a property to hold the image's div. We'll
+        // actually create this div upon receipt of the onAdd()
+        // method so we'll leave it null for now.
+        this.div_ = null;
+
+        // Explicitly call setMap on this overlay
+        this.setMap(map);
+      }
+
+      USGSOverlay.prototype.onAdd = function() {
+
+        // Note: an overlay's receipt of onAdd() indicates that
+        // the map's panes are now available for attaching
+        // the overlay to the map via the DOM.
+
+        // Create the DIV and set some basic attributes.
+        var div = document.createElement('div');
+        div.style.borderStyle = 'none';
+        div.style.borderWidth = '0px';
+        div.style.position = 'absolute';
+
+        // Create an IMG element and attach it to the DIV.
+        var img = document.createElement('img');
+        img.src = this.image_;
+        img.style.width = '100%';
+        img.style.height = '100%';
+        img.style.position = 'absolute';
+        div.appendChild(img);
+
+        // Set the overlay's div_ property to this DIV
+        this.div_ = div;
+
+        // We add an overlay to a map via one of the map's panes.
+        // We'll add this overlay to the overlayLayer pane.
+        var panes = this.getPanes();
+        panes.overlayLayer.appendChild(div);
+      }
+
+      USGSOverlay.prototype.draw = function() {
+
+        // Size and position the overlay. We use a southwest and northeast
+        // position of the overlay to peg it to the correct position and size.
+        // We need to retrieve the projection from this overlay to do this.
+        var overlayProjection = this.getProjection();
+
+        // Retrieve the southwest and northeast coordinates of this overlay
+        // in latlngs and convert them to pixels coordinates.
+        // We'll use these coordinates to resize the DIV.
+        var sw = overlayProjection.fromLatLngToDivPixel(this.bounds_.getSouthWest());
+        var ne = overlayProjection.fromLatLngToDivPixel(this.bounds_.getNorthEast());
+
+        // Resize the image's DIV to fit the indicated dimensions.
+        var div = this.div_;
+        div.style.left = sw.x + 'px';
+        div.style.top = ne.y + 'px';
+        div.style.width = (ne.x - sw.x) + 'px';
+        div.style.height = (sw.y - ne.y) + 'px';
+      }
+
+      USGSOverlay.prototype.onRemove = function() {
+        this.div_.parentNode.removeChild(this.div_);
+        this.div_ = null;
+      }
+
+      $(document).ready(function(){
+      	initialize();
+      });
+    </script>
+<div subpage="course-main-map" class="subpage" style="display: block;">
+	<div id="wrap" align="center">
+    <div id="map_container">
+      <div id="map_canvas"></div>
+    </div>
+  </div>
 </div> <!-- page done-->
 
 <!-- For Bootstraping: notify this subpage is done.  -->
