--- a/studynet/apps/bootstrap/static/less/application.less
+++ b/studynet/apps/bootstrap/static/less/application.less
@@ -494,7 +494,24 @@ body
     }
 }
 
+// ---- map ----
+#map_container {
+    padding: 6px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #ccc #ccc #999 #ccc;
+    -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+    -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+    box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
+    width: 800px;
+    height: 600px;
+  }
 
+#map_canvas {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
 
 
 //----
