--- a/studynet/apps/bootstrap/static/less/application.less
+++ b/studynet/apps/bootstrap/static/less/application.less
@@ -1,4 +1,12 @@
 
+#ss-logo {
+    background: url(/static/img/socialstudy.png) no-repeat;
+    width: 162px;
+    height: 40px;
+    padding: 0;
+    margin-left: 0px;
+}
+
 body
 {
     min-height: 660px;
