--- a/studynet/apps/bootstrap/templates/widget/navbar.html
+++ b/studynet/apps/bootstrap/templates/widget/navbar.html
@@ -2,7 +2,7 @@
     <!-- Navtigation Bar -->
     <div class="navbar navbar-fixed-top navbar-inverse" >
         <div class="navbar-inner" style="padding-left: 10px; padding-right: 10px">
-            <a class="brand" href="/">Social Study</a>
+            <a id="ss-logo" class="brand" href="/"></a>
             <ul class="nav">
                 {# this is important for activate the buttons on navbar #}
                 <li class="{% block home_active %}{% endblock %}"><a href="/">首頁</a></li>
