--- a/studynet/apps/bootstrap/templates/course/course-main-map.html
+++ b/studynet/apps/bootstrap/templates/course/course-main-map.html
@@ -118,10 +118,10 @@
       }
 
       $(document).ready(function(){
-      	initialize();
+      	//initialize();
       });
     </script>
-<div subpage="course-main-map" class="subpage" style="display: block;">
+<div subpage="course-main-map" class="subpage">
 	<div id="wrap" align="center">
     <div id="map_container">
       <div id="map_canvas"></div>
