--- a/studynet/apps/bootstrap/templates/course/course.html
+++ b/studynet/apps/bootstrap/templates/course/course.html
@@ -24,7 +24,7 @@
                 <h3 class="Notes">筆記</h3>
             </li>
             <li>
-                <h3 class="Comments">留言</h3>
+                <h3 class="Comments">Yahoo知識+</h3>
             </li>
             <li>
                 <h3 class="Media">影音</h3>
