--- a/studynet/apps/bootstrap/templates/course/course-main-map.html
+++ b/studynet/apps/bootstrap/templates/course/course-main-map.html
@@ -122,7 +122,7 @@
       });
       */
     </script>
-<div subpage="course-main-map" class="subpage">
+<div subpage="course-main-map" class="subpage" style="display: none;">
 	<div id="wrap" align="center">
     <div id="map_container">
       <div id="map_canvas"></div>
